Add run functionality